--- a/css/styles.css
+++ b/css/styles.css
@@ -938,7 +938,7 @@ body .footer-desc {
   }
 }
 
-/*desctop*/
+/*desktop*/
 @media screen and (min-width: 1158px) {
   .container {
     max-width: 1158px;
@@ -1077,5 +1077,4 @@ body .footer-desc {
     text-align: left;
   }
 
-  .subscribe-button {}
 }
